fix for grid display wrapping, smoothed out header stickiness when scrolling, updated header icon display

--- a/sass/config/_variables.scss
+++ b/sass/config/_variables.scss
@@ -1,4 +1,4 @@
-// Variables
+// Variables - Bootstrap overrides and project specific
 // --------------------------------------------------
 
 //== Colors
@@ -43,6 +43,10 @@ $font-size-base: 13px;
 //== Navbar
 $navbar-margin-bottom: 0;
 $navbar-border-radius: 0;
+$header-primary-height-lg: 80px;
+$header-primary-height-sm: 70px;
+$header-primary-height: 63px;
+$header-secondary-height: 36px;
 
 //=== Inverted navbar
 $navbar-inverse-color: $white;
