--- a/sass/partials/_content-base.scss
+++ b/sass/partials/_content-base.scss
@@ -164,12 +164,24 @@
 		padding: 1px;
 	}
 }
-.content-main.full .module-wrapper {
-	@extend .col-sm-6;
-	@extend .col-md-4;
-	padding: 10px 0;
-	@media (min-width: $screen-sm-min) {
-		padding: 10px;
+.content-main {
+	.clearfix {
+		display: none;
+	}
+}
+.content-main.full {
+	@media (min-width: $screen-md-min) {
+		.clearfix {
+			display: block;
+		}
+	}
+	.module-wrapper {
+		@extend .col-sm-6;
+		@extend .col-md-4;
+		padding: 10px 0;
+		@media (min-width: $screen-sm-min) {
+			padding: 10px;
+		}
 	}
 }
 .module {
@@ -237,6 +249,7 @@
 .title-text {
 	padding: 10px 20px;
 	@media (min-width: $screen-sm-min) {
+		width: 100%;
 		position: absolute;
 		top: 0px;
 		padding: 10px 20px 0 20px;
